Dodanie komponentu BMR

--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -40,6 +40,12 @@
                             <span>BMI</span>
                         </a>
                     </li>
+                    <li>
+                        <a class="dropdown-item" routerLink="bmr" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
+                            <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
+                            <span>BMR</span>
+                        </a>
+                    </li>
                 </ul>
             </li>
             <!-- jhipster-needle-add-element-to-menu - JHipster will add new menu items here -->
