--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-primary navbar-expand-md bg-primary">
+<nav class="navbar navbar-dark navbar-expand-md bg-primary">
     <a class="navbar-brand logo" routerLink="/" (click)="collapseNavbar()">
         <span class="logo-img"></span>
-        <span class="navbar-title">Aplikacja_dietetyczna</span> <span class="navbar-version">{{version}}</span>
+        <span class="navbar-title">Aplikacja Dietetyczna</span> <span class="navbar-version"></span>
     </a>
     <a class="navbar-toggler d-lg-none" href="javascript:void(0);" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" (click)="toggleNavbar()">
         <fa-icon icon="bars"></fa-icon>
@@ -17,9 +17,9 @@
                 </a>
             </li>
             <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                <a class="nav-link" routerLink="/kontakt" (click)="collapseNavbar()">
+                <a class="nav-link" routerLink="kontakt" (click)="collapseNavbar()">
                     <span>
-                        <fa-icon icon="heartbeat"></fa-icon>
+                        <fa-icon icon="mobile-alt"></fa-icon>
                         <span>Kontakt</span>
                     </span>
                 </a>
