--- a/src/main/webapp/app/entities/bmr/bmr.component.html
+++ b/src/main/webapp/app/entities/bmr/bmr.component.html
@@ -38,9 +38,9 @@
                         <div *ngIf="f.wiek.errors.required">Wpisz wiek!</div>
                     </div>
                 </div>
+                <div><label>Wybierz płeć </label></div>
                 <div class="form-group">
-                    <label>Wybierz płeć </label>
-                    <div class="row">
+                    <div class="plec">
                         <label class="md-check">
                             <input type="radio" value="kobieta" name="plec" formControlName="plec">
                             Kobieta
