--- a/src/main/webapp/app/entities/kontakt/kontakt.component.html
+++ b/src/main/webapp/app/entities/kontakt/kontakt.component.html
@@ -39,8 +39,8 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="textArea">Wpisz wiadomość</label>
-                    <textarea class="form-control" formControlName="textArea" id="textArea" rows="5"></textarea>
+                    <label for="wiadomosc">Wpisz wiadomość</label>
+                    <textarea class="form-control" formControlName="wiadomosc" id="wiadomosc" rows="5"></textarea>
                 </div>
                 <div *ngIf="submitted == true">
                     <div class="form-group">
