--- a/src/main/webapp/app/account/register/register.component.html
+++ b/src/main/webapp/app/account/register/register.component.html
@@ -1,26 +1,26 @@
 <div>
     <div class="row justify-content-center">
         <div class="col-md-8">
-            <h1>Registration</h1>
+            <h1>Rejestracja użytkownika</h1>
 
             <div class="alert alert-success" *ngIf="success">
-                <strong>Registration saved!</strong> Please check your email for confirmation.
+                <strong>Rejestracja użytkownika zakończona sukcesem!</strong> Sprawdź czy dostałeś potwiedzenie z aktywacją na swojego maila.
             </div>
 
             <div class="alert alert-danger" *ngIf="error">
-                <strong>Registration failed!</strong> Please try again later.
+                <strong>Rejestacja użytkownika zakończyła się niepowodzeniem!</strong> Proszę spróbować jeszcze raz.
             </div>
 
             <div class="alert alert-danger" *ngIf="errorUserExists">
-                <strong>Login name already registered!</strong> Please choose another one.
+                <strong>W bazie istnieje już taki użytkownik!</strong> Proszę wybrać inną nazwę.
             </div>
 
             <div class="alert alert-danger" *ngIf="errorEmailExists">
-                <strong>Email is already in use!</strong> Please choose another one.
+                <strong>W bazie istnieje już taki adres email!</strong> Proszę wybrać inny adres email.
             </div>
 
             <div class="alert alert-danger" *ngIf="doNotMatch">
-                The password and its confirmation do not match!
+                Hasło oraz powtórzone hasło nie są identyczne.
             </div>
         </div>
     </div>
@@ -29,97 +29,92 @@
             <form name="form" role="form" (ngSubmit)="register()" [formGroup]="registerForm" *ngIf="!success">
                 <div class="form-group">
 
-                    <label class="form-control-label" for="login">Username</label>
-                    <input type="text" class="form-control" id="login" name="login" placeholder="Your username"
+                    <label class="form-control-label" for="login">Nazwa użytkownika</label>
+                    <input type="text" class="form-control" id="login" name="login" placeholder="Wprowadź nazwę"
                            formControlName="login">
                     <div *ngIf="registerForm.get('login').invalid && (registerForm.get('login').dirty || registerForm.get('login').touched)">
                         <small class="form-text text-danger" *ngIf="registerForm.get('login').errors.required">
-                            Your username is required.
+                            Nazwa użytkownika jest wymagana.
                         </small>
                         <small class="form-text text-danger" *ngIf="registerForm.get('login').errors.minlength"
                                >
-                            Your username is required to be at least 1 character.
+                            Nazwa użytkownika musi zawierać przynajmniej jeden znak.
                         </small>
                         <small class="form-text text-danger" *ngIf="registerForm.get('login').errors.maxlength"
                                >
-                            Your username cannot be longer than 50 characters.
+                            Nazwa użytkownika nie może mieć więcej niż 50 znaków.
                         </small>
                         <small class="form-text text-danger" *ngIf="registerForm.get('login').errors.pattern"
                               >
-                            Your username can only contain letters and digits.
+                            Nazwa użytkownika może zawierać jedynie cyfry oraz znaki.
                         </small>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="email">Email</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="Your email"
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Wprowadź adres email"
                              formControlName="email">
                     <div *ngIf="registerForm.get('email').invalid && (registerForm.get('email').dirty || registerForm.get('email').touched)">
                         <small class="form-text text-danger" *ngIf="registerForm.get('email').errors.required"
                                >
-                            Your email is required.
+                            Adres email jest wymagany.
                         </small>
                         <small class="form-text text-danger" *ngIf="registerForm.get('email').errors.invalid"
                               >
-                            Your email is invalid.
+                            Adres email jest niepoprawny.
                         </small>
                         <small class="form-text text-danger" *ngIf="registerForm.get('email').errors.minlength"
                               >
-                            Your email is required to be at least 5 characters.
+                            Adres email musi posiadać przynajmniej 5 znaków.
                         </small>
                         <small class="form-text text-danger" *ngIf="registerForm.get('email').errors.maxlength"
                               >
-                            Your email cannot be longer than 100 characters.
+                            Adres email nie może mieć więcej niż 100 znaków.
                         </small>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" for="password">New password</label>
-                    <input type="password" class="form-control" id="password" name="password" placeholder="New password"
+                    <label class="form-control-label" for="password">Hasło</label>
+                    <input type="password" class="form-control" id="password" name="password" placeholder="Wprowadź hasło"
                             formControlName="password">
                     <div *ngIf="registerForm.get('password').invalid && (registerForm.get('password').dirty || registerForm.get('password').touched)">
                         <small class="form-text text-danger" *ngIf="registerForm.get('password').errors.required"
                                >
-                            Your password is required.
+                            Hasło jest wymagane.
                         </small>
                         <small class="form-text text-danger" *ngIf="registerForm.get('password').errors.minlength"
                                >
-                            Your password is required to be at least 4 characters.
+                            Hasło musi posiadać przynajmniej 4 znaki.
                         </small>
                         <small class="form-text text-danger" *ngIf="registerForm.get('password').errors.maxlength"
                                >
-                            Your password cannot be longer than 50 characters.
+                            Hasło nie może posiadać więcej niż 50 znaków.
                         </small>
                     </div>
                     <jhi-password-strength-bar [passwordToCheck]="registerForm.get('password').value"></jhi-password-strength-bar>
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" for="confirmPassword">New password confirmation</label>
-                    <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="Confirm the new password"
+                    <label class="form-control-label" for="confirmPassword">Powtórzenie hasła</label>
+                    <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="Wprowadź ponownie hasło"
                             formControlName="confirmPassword">
                     <div *ngIf="registerForm.get('confirmPassword').invalid && (registerForm.get('confirmPassword').dirty || registerForm.get('confirmPassword').touched)">
                         <small class="form-text text-danger" *ngIf="registerForm.get('confirmPassword').errors.required"
                               >
-                            Your confirmation password is required.
+                            Powtórzenie hasła jest wymagane.
                         </small>
                         <small class="form-text text-danger" *ngIf="registerForm.get('confirmPassword').errors.minlength"
                              >
-                            Your confirmation password is required to be at least 4 characters.
+                            Powtórzenie hasła musi posiadać przynajmniej 4 znaki.
                         </small>
                         <small class="form-text text-danger" *ngIf="registerForm.get('confirmPassword').errors.maxlength"
                               >
-                            Your confirmation password cannot be longer than 50 characters.
+                            Powtórzenie hasła nie może posiadać więcej niż 50 znaków.
                         </small>
                     </div>
                 </div>
 
-                <button type="submit" [disabled]="registerForm.invalid" class="btn btn-primary">Register</button>
+                <button type="submit" [disabled]="registerForm.invalid" class="btn btn-primary">Zarejestruj</button>
             </form>
-            <p></p>
-            <div class="alert alert-warning">
-                <span>If you want to </span>
-                <a class="alert-link" (click)="openLogin()">sign in</a><span>, you can try the default accounts:<br/>- Administrator (login="admin" and password="admin") <br/>- User (login="user" and password="user").</span>
-            </div>
         </div>
     </div>
 </div>
