--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -69,20 +69,20 @@
                 <ul class="dropdown-menu" ngbDropdownMenu aria-labelledby="entity-menu">
                     <li>
                         <a class="dropdown-item" routerLink="skladniki" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
-                            <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
-                            <span>Skladniki</span>
+                            <fa-icon icon="apple-alt" fixedWidth="true"></fa-icon>
+                            <span>Składniki</span>
                         </a>
                     </li>
                     <li>
                         <a class="dropdown-item" routerLink="przepis-skladniki" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
-                            <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
-                            <span>Przepis Skladniki</span>
+                            <fa-icon icon="shopping-basket" fixedWidth="true"></fa-icon>
+                            <span>Składniki Przepisu</span>
                         </a>
                     </li>
                     <li>
                         <a class="dropdown-item" routerLink="przepis" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
-                            <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
-                            <span>Przepis</span>
+                            <fa-icon icon="clipboard-list" fixedWidth="true"></fa-icon>
+                            <span>Przepisy</span>
                         </a>
                     </li>
                     <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
