--- a/src/main/webapp/app/entities/przepis-skladniki/przepis-skladniki-detail.component.html
+++ b/src/main/webapp/app/entities/przepis-skladniki/przepis-skladniki-detail.component.html
@@ -13,6 +13,10 @@
                 <dd>
                     <span>{{przepisSkladniki.kalorieIlosc}}</span>
                 </dd>
+                <dt><span>Przepis Id</span></dt>
+                <dd>
+                    <span>{{przepisSkladniki.przepisId}}</span>
+                </dd>
                 <dt><span>Skladniki</span></dt>
                 <dd>
                     <div *ngIf="przepisSkladniki.skladniki">
