--- a/src/main/webapp/app/entities/przepis-skladniki/przepis-skladniki-update.component.html
+++ b/src/main/webapp/app/entities/przepis-skladniki/przepis-skladniki-update.component.html
@@ -19,6 +19,11 @@
                     <input type="number" class="form-control" name="kalorieIlosc" id="field_kalorieIlosc"
                            formControlName="kalorieIlosc"/>
                 </div>
+                <div class="form-group">
+                    <label class="form-control-label" for="field_przepisId">Przepis Id</label>
+                    <input type="number" class="form-control" name="przepisId" id="field_przepisId"
+                           formControlName="przepisId"/>
+                </div>
 
                 <div class="form-group">
                     <label class="form-control-label" for="field_skladniki">Skladniki</label>
