--- a/src/main/webapp/app/entities/skladniki/skladniki.component.html
+++ b/src/main/webapp/app/entities/skladniki/skladniki.component.html
@@ -1,10 +1,13 @@
 <div>
     <h2 id="page-heading">
         <span>Lista składników wraz z ich kalorycznością</span>
-        <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-skladniki" [routerLink]="['/skladniki/new']">
+        <button id="jh-create-entity"
+                *jhiHasAnyAuthority="'ROLE_ADMIN'"
+                class="btn btn-primary float-right jh-create-entity create-skladniki"
+                [routerLink]="['/skladniki/new']">
             <fa-icon [icon]="'plus'"></fa-icon>
             <span >
-            Dodaj nowy składknik
+            Dodaj nowy składnik
             </span>
         </button><br>
         <button type="submit" class="btn btn-info btn-sm" (click)="getAllSkladniki()">
