--- a/src/main/webapp/app/entities/przepis/przepis-detail.component.html
+++ b/src/main/webapp/app/entities/przepis/przepis-detail.component.html
@@ -30,6 +30,10 @@
                 <dd>
                     <span>{{przepis.kalorieSuma}}</span>
                 </dd>
+                <dt><span>User</span></dt>
+                <dd>
+                    {{przepis.user?.login}}
+                </dd>
             </dl>
 
             <button type="submit"
