--- a/src/main/webapp/app/entities/przepis-skladniki/przepis-skladniki.component.html
+++ b/src/main/webapp/app/entities/przepis-skladniki/przepis-skladniki.component.html
@@ -51,10 +51,15 @@
                 <input type="hidden" class="form-control" name="zdjecieContentType" id="field_zdjecieContentType"
                        formControlName="zdjecieContentType" />
             </div>
+<!--            <div class="form-group">-->
+<!--                <label class="form-control-label" for="field_opis">Opis</label>-->
+<!--                <input type="text" class="form-control" name="opis" id="field_opis"-->
+<!--                       formControlName="opis"/>-->
+<!--            </div>-->
             <div class="form-group">
                 <label class="form-control-label" for="field_opis">Opis</label>
-                <input type="text" class="form-control" name="opis" id="field_opis"
-                       formControlName="opis"/>
+                <textarea type="text" class="form-control" name="opis" id="field_opis"
+                          formControlName="opis" rows="5"></textarea>
             </div>
         </div>
         <div>
